fix styles on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -118,7 +118,7 @@ $headerHeight: 80px;
           top: 80px;
           padding: 30px;
           background-color: colors.$white;
-
+          left: 0;
         }
       }
     }
