--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -116,7 +116,7 @@
     }
   }
 
-  @media (max-width: breakpoints.$tabletBreakpoint) {
+  @media (max-width: breakpoints.$tabletMediumBreakpoint) {
     flex-wrap: wrap;
     padding: 100px 20px 0;
     &__image {
@@ -129,6 +129,10 @@
   @media (max-width: breakpoints.$mediumMobileBreakpoint) {
     &__info {
       text-align: left;
+    }
+    .actions {
+      flex-direction: column;
+      gap: 20px;
     }
   }
 }
